Implement legacy endpoint
